[package]
name = "enum-trait"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow-buffer = "50.0.0"
arrow-schema = "50.0.0"
arrow-array = "50.0.0"

[dev-dependencies]
criterion = { version = "0.5" }
rand = "0.8.5"

[[bench]]
name = "bench"
harness = false
